--- a/MCF.Data.Orm/MCF.Data.Orm.csproj
+++ b/MCF.Data.Orm/MCF.Data.Orm.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Gitee.Api" Version="1.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\MCF.Lib.Data\MCF.Lib.Data.csproj" />
     <ProjectReference Include="..\MCF.Lib\MCF.Lib.csproj" />
   </ItemGroup>
