--- a/MyCoreFramework/MyCoreFramework.csproj
+++ b/MyCoreFramework/MyCoreFramework.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Gitee.Api" Version="1.0.2" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
   </ItemGroup>
 
